hphp/hack/test/typecheck/expression_trees/splice_state.php.exp
File "splice_state.php", line 25, characters 23-31:
Typing error (Typing[4110])
  File "splice_state.php", line 25, characters 23-27:
  Expected `num` because this is used in an arithmetic operation
  File "splice_state.php", line 6, characters 10-13:
  But got `?int`
  File "splice_state.php", line 23, characters 15-117:
  All the local information about `$x->x` has been invalidated by this lambda function.
This is a limitation of the type-checker; use a local if that's the problem.
